[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/gui.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://bgm/song1.ogg" type="AudioStream" id=3]
[ext_resource path="res://common/quit_on_action.gd" type="Script" id=4]
[ext_resource path="res://level/level.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/audio_fader.tscn" type="PackedScene" id=6]
[ext_resource path="res://bgm/bgm.gd" type="Script" id=7]
[ext_resource path="res://bgm/song4.ogg" type="AudioStream" id=8]
[ext_resource path="res://bgm/song2.ogg" type="AudioStream" id=9]
[ext_resource path="res://bgm/song3.ogg" type="AudioStream" id=10]
[ext_resource path="res://main/main.gd" type="Script" id=11]
[ext_resource path="res://main/camera2d.gd" type="Script" id=12]
[ext_resource path="res://common/camera_shake.gd" type="Script" id=13]
[ext_resource path="res://gui/end.tscn" type="PackedScene" id=14]
[ext_resource path="res://gui/end2.tscn" type="PackedScene" id=15]

[node name="Main" type="Node2D"]
script = ExtResource( 11 )

[node name="QuitOnAction" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GUICanvas" type="CanvasLayer" parent="."]

[node name="HUD" parent="GUICanvas" instance=ExtResource( 1 )]

[node name="HellTint" type="ColorRect" parent="GUICanvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.952941, 0.2, 0.0784314, 0.270588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutOfEnergy" parent="GUICanvas" instance=ExtResource( 14 )]
visible = false

[node name="DiedInHell" parent="GUICanvas" instance=ExtResource( 15 )]
visible = false

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )
z_index = 1
walk_speed = 300.0
start_fuel = 100
punch_strength = [ 1, 2, 3, 5 ]

[node name="Bgm" type="AudioStreamPlayer" parent="."]
autoplay = true
script = ExtResource( 7 )
bgms = [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ]

[node name="AudioFader" parent="Bgm" instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 144 )
current = true
script = ExtResource( 12 )

[node name="Shake" type="Node" parent="Camera2D"]
script = ExtResource( 13 )

[node name="HellTween" type="Tween" parent="."]

[connection signal="depth_changed" from="Player" to="." method="_on_Player_depth_changed"]
[connection signal="fuel_changed" from="Player" to="GUICanvas/HUD" method="update_fuel"]
[connection signal="gem_changed" from="Player" to="GUICanvas/HUD" method="update_gem"]
[connection signal="level_changed" from="Player" to="Bgm" method="_on_Player_level_changed"]
[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
[connection signal="tween_all_completed" from="Bgm/AudioFader/FadeOutTween" to="Bgm" method="_on_FadeOutTween_tween_all_completed"]

[editable path="Bgm/AudioFader"]
